fixed spacing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -56,16 +56,12 @@
 .menuItems {
   line-height: 1.5;
   font-size: 1.5rem;
-  text-align: left;
   color: black;
-  padding: 1rem;
 }
 .menuItemsVisible {
   line-height: 1.5;
   font-size: 1.5rem;
-  text-align: left;
   color: black;
-  padding: 1rem;
 }
 
 .showMenu {
@@ -82,8 +78,12 @@
   overflow-y: auto; /* Enable scrolling if content overflows */
 }
 
-.navButtons {
-  padding: 1rem;
+.navButton {
+  padding: 1.3rem;
+  padding-bottom: 1.4rem;
+  width: 0px;
+  height: 50px;
+  color: black;
 
 }
 
@@ -119,7 +119,7 @@
   padding: 10px 2rem;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.5rem;
-  color: white;
+  color: rgb(20, 20, 20);
   background-color: rgb(20, 20, 20);
   border-radius: 4px;
 }
